@@ -121,7 +121,8 @@ check(samefilestd("show_first-interactive", "stderr"))
 
 mkdir("_MTN/resolutions")
 check(mtn("--rcfile=merge3_hook.lua", "conflicts", "--conflicts-file=_MTN/conflicts-1", "resolve_first", "interactive", "_MTN/resolutions/interactive_file"), 0, true, true)
-check(samelines("stderr", { "mtn: lua: running merge3 hook" }))
+check(samelines("stderr", { "mtn: lua: running merge3 hook",
+                            "mtn: interactive merge result saved in '_MTN/resolutions/interactive_file'"}))
 
 check(mtn("conflicts", "--conflicts-file=_MTN/conflicts-1", "show_first"), 0, nil, true)
 canonicalize("stderr")
